/*
 * Copyright 2021 - 2023 Matrix Origin
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";
package query;
option go_package = "github.com/matrixorigin/matrixone/pkg/pb/query";

import "status.proto";

enum CmdMethod {
  // Query is the common query command.
  Query = 0;
  // ShowProcessList represents the show process list query.
  ShowProcessList = 1;
}

// QueryRequest is the common query request. It contains the query
// statement that need to be executed on the specified CN node.
message QueryRequest {
  // Query is the query statement.
  string Query = 1;
}

// ShowProcessListRequest is the "show process list" query request.
message ShowProcessListRequest {
  // Tenant is the tenant which the processes belong to.
  string Tenant = 1;
  // SysTenet is true if the tenant is a system tenant.
  bool SysTenant = 2;
}

// Request is the query request.
message Request {
  // RequestID is the request ID.
  uint64 RequestID = 1;
  // CmdMethod is the type of command.
  CmdMethod CmdMethod = 2;
  // QueryRequest is the common query request.
  QueryRequest QueryRequest = 3;
  // ShowProcessListRequest is the request for show process list.
  ShowProcessListRequest ShowProcessListRequest = 4;
}

// ShowProcessListResponse is the response of command ShowProcessList.
message ShowProcessListResponse {
  repeated status.Session Sessions = 1;
}

// Response is the response to query request.
message Response {
  // RequestID is the request ID.
  uint64 RequestID = 1;
  // CmdMethod is the type of command.
  CmdMethod CmdMethod = 2;
  // Error is used to return moerr. Set
  bytes Error = 3;
  // ShowProcessListResponse is the response of ShowProcessListRequest.
  ShowProcessListResponse ShowProcessListResponse = 4;
}

